<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".MainActivity">

	<TextView
		android:id="@+id/main_activity_life_lable_txt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:layout_marginTop="8dp"
		android:text="@string/main_activity_life_label_text"
		android:textSize="16sp"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/main_activity_life_count_txt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginStart="8dp"
		android:textSize="16sp"
		app:layout_constraintBaseline_toBaselineOf="@+id/main_activity_life_lable_txt"
		app:layout_constraintStart_toEndOf="@+id/main_activity_life_lable_txt" />

	<TextView
		android:id="@+id/main_activity_score_lable_txt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="8dp"
		android:layout_marginEnd="8dp"
		android:text="@string/main_activity_score_lable"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toTopOf="parent" />

	<TextView
		android:id="@+id/main_activity_score_number_txt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		app:layout_constraintBaseline_toBaselineOf="@+id/main_activity_score_lable_txt"
		app:layout_constraintEnd_toStartOf="@+id/main_activity_score_lable_txt" />

	<TextView
		android:id="@+id/main_activity_question_box_txt"
		android:layout_width="0dp"
		android:layout_height="150dp"
		android:layout_marginStart="64dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="64dp"
		android:gravity="center"
		android:textSize="34sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/main_activity_highscore_label_txt"
		tools:visibility="invisible" />

	<EditText
		android:id="@+id/main_activity_answer_edt"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginTop="16dp"
		android:layout_marginEnd="16dp"
		android:ems="10"
		android:gravity="center"
		android:hint="@string/main_activity_answer_edt"
		android:importantForAutofill="no"
		android:inputType="number"
		android:minHeight="48dp"
		android:textColorHint="#757575"
		app:layout_constraintEnd_toEndOf="@+id/main_activity_question_box_txt"
		app:layout_constraintStart_toStartOf="@+id/main_activity_question_box_txt"
		app:layout_constraintTop_toBottomOf="@+id/main_activity_question_box_txt"
		tools:visibility="visible" />

	<Button
		android:id="@+id/main_activity_end_start_quiz_btn"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginBottom="8dp"
		android:text="@string/main_activity_end_quiz_btn_text"
		app:layout_constraintBottom_toTopOf="@+id/main_activity_time_remaining_pbar"
		app:layout_constraintEnd_toStartOf="@+id/main_activity_next_quiz_btn"
		app:layout_constraintStart_toStartOf="parent" />

	<Button
		android:id="@+id/main_activity_next_quiz_btn"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:text="@string/main_activity_next_quiz_btn"
		app:layout_constraintBaseline_toBaselineOf="@+id/main_activity_end_start_quiz_btn"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toEndOf="@+id/main_activity_end_start_quiz_btn" />

	<TextView
		android:id="@+id/main_activity_highscore_label_txt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginTop="12dp"
		android:layout_marginEnd="8dp"
		android:text="@string/main_activity_highscore_label"
		android:textSize="16sp"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintTop_toBottomOf="@+id/main_activity_score_lable_txt" />

	<TextView
		android:id="@+id/main_activity_highscore_number_txt"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_marginEnd="8dp"
		app:layout_constraintBottom_toBottomOf="@+id/main_activity_highscore_label_txt"
		app:layout_constraintEnd_toStartOf="@+id/main_activity_highscore_label_txt"
		app:layout_constraintTop_toTopOf="@+id/main_activity_highscore_label_txt" />

	<ProgressBar
		android:id="@+id/main_activity_time_remaining_pbar"
		style="@style/Widget.AppCompat.ProgressBar.Horizontal"
		android:layout_width="0dp"
		android:layout_height="wrap_content"
		android:layout_marginStart="16dp"
		android:layout_marginEnd="16dp"
		android:layout_marginBottom="8dp"
		android:max="10"
		android:progress="10"
		app:layout_constraintBottom_toBottomOf="parent"
		app:layout_constraintEnd_toEndOf="parent"
		app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>